<resources>
    <string name="app_name">Bank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="title_activity_login">Login</string>
    <string name="menu_home">My Account</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_statement">Statement</string>
    <string name="menu_exit">Exit</string>
    <string name="enter_destination_email">Enter destination email</string>
    <string name="no_connection">No Connection</string>
    <string name="from">From:</string>
    <string name="idfrom">idFrom</string>
    <string name="to">To:</string>
    <string name="idto">idTo</string>
    <string name="date">Date</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="your_balance">Your Balance</string>
    <string name="extract">Extract</string>
    <string name="transfer">Transfer</string>
    <string name="exit">Exit</string>
    <string name="r">R$</string>
    <string name="_00">,00</string>
    <string name="_0">0</string>
    <string name="send">Send</string>
    <string name="statement">Statement</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="menu_settings">Settings</string>
</resources>
