<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/mainGroup">
        <item
            android:id="@+id/nav_Statement"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_statement" />
        <item
            android:id="@+id/nav_Transfer"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_transfer" />
    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/exitGroup">
        <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_exit_to_app_white_24dp"
            android:title="@string/menu_exit" />
    </group>

</menu>
